styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Handlee&family=Nanum+Myeongjo&family=Playpen+Sans:wght@300&family=Silkscreen&family=Tektur&display=swap');


* {
    box-sizing: border-box;
}

header{
    background-color: floralwhite;
    display:grid;
    grid-column:2/4 ;
}

header img{
    border-radius:100px;  /* this changes the shape of the image */
    padding: 15px; /*  gives spacing but shortens image */
    width:100px; /*changes width of image*/
}


.cayleigh img{
    float:left;
   
}

main {
    background-color: floralwhite;
    max-width: 800px; /*sets maximum size not sure what of though*/
    margin: 75px auto; /* controls how big the space between main, header and footter */
    text-align: left;
    
    display:grid;
    grid-template-columns: 2fr;
} 

main ul{
    list-style-type: none;
}
nav{
    background-color: #8B008B;
    color: floralwhite;
    grid-column:span;
    text-align: center;
}

nav a{
    color: floralwhite;
    text-align: center;
}

nav a:hover{
    color:#f028f0;
}

nav li{
    list-style-type: none; /*this makes the dots besides the link disapear */
    padding:8px 5px 20px 5px;
}

body {
    font-family: 'tektur','san-serif';
    color:black;
    background-color:floralwhite;
}

.card {
    border-style: solid; /*shows that we want a border with this style */
    border-width: 3.8px; /* width of the border*/
    border-radius: .4rem; /*seems to control the curve of the border*/
    width: 100%;
    padding: 15px;
}

.card a:hover{
    color: #f028f0;
}

footer{
    background-color: #8B008B;
    padding: 45px;
    color: floralwhite;
    text-align: center;
    
}

